{
  "version": 4,
  "terraform_version": "0.12.7",
  "serial": 9,
  "lineage": "b2b39ffe-29a9-b513-3f58-b29135265668",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07d0cf3af28718ef8",
            "arn": "arn:aws:ec2:us-east-1:473876058653:instance/i-02c04e90abfb41d3a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-02c04e90abfb41d3a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0f44c488a520623a5",
            "private_dns": "ip-172-31-31-163.ec2.internal",
            "private_ip": "172.31.31.163",
            "public_dns": "ec2-3-88-108-115.compute-1.amazonaws.com",
            "public_ip": "3.88.108.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 105,
                "volume_id": "vol-05f415b0985ec5229",
                "volume_size": 35,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "our_group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-e5bf34ad",
            "tags": {
              "Environment": "web",
              "Name": "udemy-web-udemy",
              "Project": "udemy",
              "Region": "us-east-1",
              "Timestamp": "2019-09-07T01-18-10Z"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01b48963f4cc4464b"
            ]
          },
          "depends_on": [
            "aws_security_group.group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473876058653:security-group/sg-01b48963f4cc4464b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-01b48963f4cc4464b",
            "ingress": [],
            "name": "our_group",
            "name_prefix": null,
            "owner_id": "473876058653",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "our_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-71b37908"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "range",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 1000,
            "id": "sgrule-1853065970",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01b48963f4cc4464b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 10005,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "single",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2996020398",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01b48963f4cc4464b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.group"
          ]
        }
      ]
    }
  ]
}